Fixes for nav-tabs-secondary and adding column-content-page class with z-index positioning

--- a/site/app/assets/stylesheets/site/_core.scss
+++ b/site/app/assets/stylesheets/site/_core.scss
@@ -244,7 +244,7 @@ body.signup {
 }
 
 // Central messaging content
-.messaging {      display: none; /* hidden till markup is removed */
+.messaging {
   clear: both;
   color: white;
   text-align: center;
@@ -883,7 +883,7 @@ h1.ribbon {
 } }
 
 
-.column-content {
+.column-content.column-content-page {
   background-color: $contentColumnBackgroundColor;
   position: relative;
   padding-top: 50px;
@@ -899,6 +899,11 @@ h1.ribbon {
     height: 300px;
     width: 420px;
     opacity: .07;
+    z-index: 1;
+  }
+  > div:first-child {
+    position: relative;
+    z-index: 2;
   }
 }
 
@@ -1087,7 +1092,7 @@ body.home {
       padding: 30px $gridGutterWidthTablet 40px;
     }
   }
-  .column-content:before {
+  .column-content.column-content-page:before {
     left: -60px;
     top: -20px;
   }
@@ -1114,7 +1119,7 @@ body.home {
       text-align: center;
     }
   }
-  .column-content:before {
+  .column-content.column-content-page:before {
     width: 320px
   }
 }
